Fixed overlapping comments

--- a/assets/sass/_staticman.sass
+++ b/assets/sass/_staticman.sass
@@ -36,7 +36,6 @@
     border-radius: 50%
 
   .comment__content-wrapper
-    float: right
     width: calc(100% - 60px)
 
   .comment__author
